<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Editor_choices">Editor’s Choices</string>
    <string name="about_download">About download</string>
    <string name="about_download_description">According to Youtube\'s policy, it is not allowed to download Youtube music directly. If you want to know how other people are getting more free musics, here is our Facebook Group, join us.</string>
    <string name="about_us">About Us</string>
    <string name="action_charging_protection">Close Charging Protection</string>
    <string name="ad_price">$1.99</string>
    <string name="add">Add</string>
    <string name="add_a_quick_access_bar_to_the_pop_up_player">Add a quick control bar to the pop-up player</string>
    <string name="add_desktop_shortcut_for_music_recognition">Add desktop shortcut for music recognition</string>
    <string name="add_music_here">Add music here</string>
    <string name="add_music_recognition_desc">After creating it, you`ll be able to search for songs at any time.</string>
    <string name="add_music_recognition_shortcut">Create a shortcut for Music Recognition on desktop?</string>
    <string name="add_to_favorite">Add to Favorites</string>
    <string name="add_to_my_playlist">Add to My Playlist</string>
    <string name="add_to_the_queue">Add to the Queue</string>
    <string name="added">Added</string>
    <string name="after_watching_a_video_we_will_automatically_play_another_related_video">After watching a video, we will automatically play another related video</string>
    <string name="album">Albums</string>
    <string name="all">All</string>
    <string name="all_radios">All Radios</string>
    <string name="app_name">FreeMusic</string>
    <string name="arabic">Arabic</string>
    <string name="are_you_sure_you_want_to_clear_all">Are you sure you want to clear all?</string>
    <string name="artist">Artist:</string>
    <string name="artists">Artists</string>
    <string name="auto_play">Auto-play</string>
    <string name="auto_rotate_screen">Auto rotate screen</string>
    <string name="auto_rotate_screen_des">Following the system settings automatically rotate, the default is turned off</string>
    <string name="back_tips">Millions of free music are waiting for you~</string>
    <string name="big">Big</string>
    <string name="blues">Blues</string>
    <string name="boring">Boring</string>
    <string name="bought">Bought</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_permission_tip">Please allow FreeMusic to access your local musics for normal use</string>
    <string name="change_the_size_of_the_pop_up">Change the size of the pop-up</string>
    <string name="charging_protect">Charging Protection</string>
    <string name="charging_protect_dis">Turn on Charging Lockscreen to get realtime charging status.</string>
    <string name="chinese">Chinese</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="choose_the_size_of_the_pop_up_player">Choose the size of the pop-up player</string>
    <string name="classical">Classical</string>
    <string name="classified_music_list">Popular Genres</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_all_tip">Are you sure you want to clear all?</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_success_msg">Clear the cache successfully</string>
    <string name="collect_playlist">Collect Playlist</string>
    <string name="collected">Collected</string>
    <string name="collected_playlists">Collected Playlists</string>
    <string name="comment">Comment</string>
    <string name="comment_added">Comment added.</string>
    <string name="comments">Comments</string>
    <string name="commit_empty_content_warn">Write something to express yourself.</string>
    <string name="community_post_send_btn">Send</string>
    <string name="community_post_title">Make Post</string>
    <string name="community_post_type">Select a topic:</string>
    <string name="contains_ads">Contains ads</string>
    <string name="continues">Continue</string>
    <string name="continuous_charge">Continuous</string>
    <string name="copy">Copy</string>
    <string name="copy_tip_success">Copied</string>
    <string name="copy_url">Copy Video Url</string>
    <string name="country">Country</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="create_playlist">Created Playlists</string>
    <string name="create_playlist_size">%1$d Songs</string>
    <string name="custom">Custom</string>
    <string name="dance">Dance</string>
    <string name="days_ago">days ago</string>
    <string name="decades">Decades</string>
    <string name="delete">Delete</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete_playlist_tips">Delete Playlist?</string>
    <string name="delete_song_description">Delete the song from your device?</string>
    <string name="delete_success">Successfully deleted</string>
    <string name="deleting">Deleting</string>
    <string name="deny">Deny</string>
    <string name="discovery">Discover</string>
    <string name="discuss_the_use_of_app_and_exchange_your_favorite_musics_with_others">Discuss the use of app and exchange your favorite music with others</string>
    <string name="don_not_share_tip_msdg">Can\'t find share component to share</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="drag_to_the_bottom_delating_areas_to_end_music">Drag to the bottom delating areas to end music.</string>
    <string name="driving">Driving</string>
    <string name="editing">Editing</string>
    <string name="edm">EDM</string>
    <string name="enable">Enable</string>
    <string name="english">English</string>
    <string name="enjoy_it">Enjoy it~</string>
    <string name="enjoy_music_unlimitedly">Enjoy music unlimitedly</string>
    <string name="enjoy_your_music">Enjoy Your Music</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="error_player_msg">Play failed, please check the source</string>
    <string name="error_report">Error Report</string>
    <string name="exit">Exit</string>
    <string name="facebook_group">Facebook Group</string>
    <string name="failed_to_load">Failed To Load</string>
    <string name="fast_charge">Speed</string>
    <string name="favorites">Favorites</string>
    <string name="featured">Featured</string>
    <string name="featured_playlist">Featured Playlist</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_your_problems">Feedback your problems</string>
    <string name="find_lyric">Find Lyrics</string>
    <string name="find_mp3">Find Mp3 Resource</string>
    <string name="go">Go</string>
    <string name="go_to_browser">The next operation will open Google search and find the resource.</string>
    <string name="hot">Hot</string>
    <string name="loading">Loading…</string>
    <string name="new1">New</string>
    <string name="no_one_commented_yet_write_your_comment_now">No comment yet, add now?</string>
    <string name="play_next">Play Next</string>
    <string name="play_now">Play Now</string>
    <string name="reply">Reply</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="switch_quick_tools_guide">Using our Toolbar,\n more convenient for your life!</string>
    <string name="the_end">The End</string>
</resources>