<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="282dp" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/add_play_list_ll" android:background="@drawable/bg_white_radius_3dp" android:paddingTop="14dp" android:paddingBottom="14dp" android:layout_width="282dp" android:layout_height="wrap_content">
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="@color/color_2b2525" android:gravity="center_vertical" android:id="@+id/reply_comment" android:background="?android:attr/selectableItemBackground" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginBottom="4dp" android:text="@string/reply" app:typeface="normal"/>
        <View android:background="@color/line_color" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="@color/color_2b2525" android:gravity="center_vertical" android:id="@+id/copy_comment" android:background="?android:attr/selectableItemBackground" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" android:text="@string/copy" app:typeface="normal"/>
        <View android:background="@color/line_color" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="@color/color_2b2525" android:gravity="center_vertical" android:id="@+id/report_comment" android:background="?android:attr/selectableItemBackground" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginTop="4dp" android:text="@string/report" app:typeface="normal"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="@color/color_2b2525" android:gravity="center_vertical" android:id="@+id/delete_comment" android:background="?android:attr/selectableItemBackground" android:paddingLeft="20dp" android:paddingRight="20dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginTop="4dp" android:text="@string/delete" app:typeface="normal"/>
    </LinearLayout>
</LinearLayout>
