<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_play_now" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginTop="14dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_playnow" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/play_now" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_play_next" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_playnext_discover" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/play_next" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_delete" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_delete" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/delete" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_add" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_addtoqueue" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/add_to_the_queue" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_share" android:background="@drawable/click_status_f5f0f1" android:visibility="visible" android:layout_width="match_parent" android:layout_height="46dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_share" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/share" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_artist" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_artist" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@+id/txt_artists" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/artist" android:maxLines="1" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_copy_url" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_copy_url" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/copy_url" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_find_lyric" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_findlyric" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/find_lyric" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin_find_mp3" android:background="@drawable/click_status_f5f0f1" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginBottom="14dp">
        <ImageView android:layout_gravity="center_vertical" android:background="@mipmap/icon_find_mp3" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="16dp" android:scaleType="centerCrop"/>
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="#4a4a4a" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/find_mp3" app:typeface="normal"/>
    </LinearLayout>
</LinearLayout>
