<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="@drawable/shape_white_corner" android:paddingBottom="15dp" android:layout_width="310dp" android:layout_height="wrap_content">
        <ImageView android:id="@+id/close_img" android:padding="10dp" android:layout_width="32dp" android:layout_height="wrap_content" android:src="@mipmap/icon_close_grey" android:scaleType="centerCrop" android:adjustViewBounds="true" android:layout_alignParentRight="true"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/cover_img" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@mipmap/icon_recognize_music" android:scaleType="centerCrop" android:adjustViewBounds="true"/>
            <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/color_343434" android:gravity="left" android:id="@+id/title_tx" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/add_music_recognition_shortcut" app:typeface="monospace"/>
            <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="15sp" android:textColor="@color/color_343434" android:gravity="left" android:id="@+id/desc_tx" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/add_music_recognition_desc"/>
            <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/ok_tx" android:background="@drawable/bt_clear_border" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:text="@string/add" app:typeface="monospace"/>
            <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="16sp" android:textColor="@color/color_9b9b8c" android:gravity="center" android:id="@+id/cancel_tx" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:text="@string/cancel"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
