<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_white_radius_3dp" android:paddingLeft="18dp" android:paddingTop="27dp" android:paddingRight="18dp" android:paddingBottom="30dp" android:layout_width="310dp" android:layout_height="wrap_content">
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="15sp" android:textColor="@color/color_2b2525" android:id="@+id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/are_you_sure_you_want_to_clear_all" app:typeface="normal"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginTop="32dp">
            <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="15sp" android:textColor="@color/color_b6afb0" android:gravity="center" android:id="@+id/cancel" android:background="@drawable/dialog_btn_grey_selector" android:layout_width="0dp" android:layout_height="36dp" android:text="@string/cancel" android:layout_weight="1" app:typeface="monospace"/>
            <View android:layout_width="18dp" android:layout_height="1dp"/>
            <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/clear" android:background="@drawable/dialog_btn_red_selector" android:layout_width="0dp" android:layout_height="36dp" android:text="@string/clear" android:layout_weight="1" app:typeface="monospace"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
