<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/load_more_loading_view" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15sp" android:textColor="@color/color_9b9b9b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading"/>
        <ProgressBar android:layout_gravity="center" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/load_more_end_view" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.fotoable.youtube.music.ui.view.LaToTextView android:textSize="12sp" android:textColor="@color/color_9b9b9b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/the_end" android:drawableLeft="@drawable/line_theend" android:drawableRight="@drawable/line_theend" android:drawablePadding="10dp" android:textAllCaps="true" app:typeface="normal"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/load_more_error_view" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15sp" android:textColor="@color/color_9b9b9b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/failed_to_load"/>
    </LinearLayout>
</LinearLayout>
